# py-jplm

./: .gitignore  pyproject.toml
examples/: read_pgx.ipynb
jplm/: __init__.py  config.py  lightfield.py  runner.py  utils.py
jplm/ctc/: ctc_configs.py  ctc_downloader.py
jplm/pgx/: __init__.py  pgx_handler.py  pgx_reader.py
tests/: test_pgx.py
tests/pgx_files/: bikes.pgx  greek.pgx
